Fix scrollbar on mobile
Adding the logout button changed the height of content lists.

--- a/frontend/src/js/components/containers/SummaryContainer/SummaryContainer.css
+++ b/frontend/src/js/components/containers/SummaryContainer/SummaryContainer.css
@@ -13,6 +13,11 @@
 @media (max-width: 768px) {
     .sidenav {
         width: 100%;
+        position: relative;
+    }
+
+    .main-content {
+        display: none;
     }
 
     .logout-mobile {
@@ -33,6 +38,6 @@
     }
 
     .content-container {
-        max-height: calc(100vh - 260px);
+        max-height: calc(100vh - 330px);
     }
 }
